# philo

./: CMakeLists.txt  check_args.c  create.c  exec.c  init.c  main_gat_val_f_thread.c  main_thread_cycle.c  philo.h  philo_main.c
utils/: utils.h
